modified:   LoginDialog.pyc 	modified:   MainMenuDialog.pyc 	modified:   OnlineDialog.pyc 	modified:   PidSelectDialog.pyc 	modified:   PidShowDialog.pyc 	modified:   UI/PIDshow.pyc 	modified:   UI/__init__.pyc 	modified:   UI/login.pyc 	modified:   UI/mainmenu.pyc 	modified:   UI/online.pyc 	modified:   UI/pidselect.pyc 	modified:   UI/welcome.pyc 	modified:   WelcomeDialog.pyc 	modified:   data/DataManagement.pyc 	modified:   data/__init__.pyc 	modified:   data/cfgparser.pyc 	modified:   data/pid_list.cfg 	new file:   log.txt 	modified:   obd/OBDCommand.pyc 	modified:   obd/OBDResponse.pyc 	modified:   obd/UnitsAndScaling.pyc 	modified:   obd/__init__.pyc 	modified:   obd/__version__.pyc 	modified:   obd/async.pyc 	modified:   obd/codes.pyc 	modified:   obd/commands.pyc 	modified:   obd/decoders.pyc 	modified:   obd/elm327.pyc 	modified:   obd/obd.pyc 	modified:   obd/protocols/__init__.pyc 	modified:   obd/protocols/protocol.pyc 	modified:   obd/protocols/protocol_can.pyc 	modified:   obd/protocols/protocol_legacy.pyc 	modified:   obd/protocols/protocol_unknown.pyc 	modified:   obd/utils.pyc 	new file:   testobd.py 	new file:   testserial.py 	new file:   users/Alfredo_Ferreras/Alfredo_Ferreras_obdsim_2018.8.14_17.11.32.db 	new file:   users/Alfredo_Ferreras/Alfredo_Ferreras_obdsim_2018.8.14_17.13.23.db 	new file:   users/Alfredo_Ferreras/Alfredo_Ferreras_obdsim_2018.8.14_17.19.20.db 	new file:   users/Alfredo_Ferreras/Alfredo_Ferreras_obdsim_2018.8.14_18.30.45.db 	new file:   users/Alfredo_Ferreras/Alfredo_Ferreras_obdsim_2018.8.14_18.33.30.db 	new file:   users/Alfredo_Ferreras/Alfredo_Ferreras_obdsim_2018.8.14_18.53.0.db 	new file:   users/Alfredo_Ferreras/Alfredo_Ferreras_obdsim_2018.8.14_18.53.0.db-journal

--- a/data/pid_list.cfg
+++ b/data/pid_list.cfg
@@ -37,7 +37,7 @@
 #~ 0238 = DTC_O2_S5_WR_CURRENT
 #~ 013a = O2_S7_WR_CURRENT
 #~ 0141 = STATUS_DRIVE_CYCLE
-#~ 012f = FUEL_LEVEL
+012f = FUEL_LEVEL
 #~ 012e = EVAPORATIVE_PURGE
 #~ 012d = EGR_ERROR
 #~ 012c = COMMANDED_EGR
@@ -60,7 +60,7 @@
 #~ 0129 = O2_S6_WR_VOLTAGE
 #~ 0128 = O2_S5_WR_VOLTAGE
 #~ 022a = DTC_O2_S7_WR_VOLTAGE
-#~ 015c = OIL_TEMP
+015c = OIL_TEMP
 #~ 013d = CATALYST_TEMP_B2S1
 #~ 013e = CATALYST_TEMP_B1S2
 #~ 0600 = MIDS_A
